--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
 
   <body>
-    <h1>Josh</h1>
-    <h2><a href="https://github.com/Poop">Github</a></h2>
+    <h1>john</h1>
+    <h2><a href="https://github.com/socks">Github</a></h2>
   </body>
   </html>
   
